# Simple-revm-simulation

./: Cargo.toml  Counter.json  Counter.sol  README.md  weth_storage.json
crytic-export/etherscan-contracts/: crytic_compile.config.json
src/: main.rs
