[package]
name = "revm-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
dotenv = "0.15.0"
ethabi = "18.0.0"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.21"
sha3 = "0.10.8"
tokio = { version = "1.37", features = ["full"] }


# Foundry and its dependencies
# solc & compilation utilities
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "5ac78a9cd4b94dc53d1fe5e0f42372b28b5a7559" }

# solc & compilation utilities
foundry-block-explorers = { version = "0.2.8", default-features = false }
foundry-compilers = { version = "0.5.2", default-features = false }

## revm
# no default features to avoid c-kzg
revm = { version = "9.0.0", default-features = false, features = [
    "ethersdb",
    "memory_limit",
    "optimism",
    "optional_balance_check",
    "optional_no_base_fee",
    "optional_beneficiary_reward",
    "optional_gas_refund",
    "optional_block_gas_limit",
    "optional_eip3607",
    "std",
] }
revm-primitives = { version = "4", default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "0d3f1f4", features = [
    "serde",
] }

## ethers
ethers-contract-abigen = { version = "2.0.14", default-features = false }

## alloy


alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false, features = [
    "reqwest",
] }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-signer-trezor = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "5940871", default-features = false }
alloy-primitives = { version = "0.7.1", features = ["getrandom", "rand"] }
alloy-dyn-abi = "0.7.1"
alloy-json-abi = "0.7.1"
alloy-sol-types = "0.7.1"
syn-solidity = "0.7.1"
alloy-chains = "0.1"
alloy-trie = "0.4.1"
alloy-rlp = "0.3.3"
solang-parser = "=0.3.3"

## misc
arrayvec = "0.7"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
color-eyre = "0.6"
derive_more = "0.99"
evm-disassembler = "0.5"
eyre = "0.6"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
itertools = "0.13"
jsonpath_lib = "0.3"
k256 = "0.13"
similar-asserts = "1.5"
rand = "0.8"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
strum = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
vergen = { version = "8", default-features = false }
indexmap = "2.2"
tikv-jemallocator = "0.5.4"
num-format = "0.4.4"
yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
tempfile = "3.10"
rayon = "1"

axum = "0.7"
hyper = "1.0"
reqwest = { version = "0.12", default-features = false }
tower = "0.4"
tower-http = "0.5"
